# pyraio

./: .gitignore  README.md  aligned_alloc_extra.pxd  clibaio.pxd  pyproject.toml  pyraio.c  pyraio.pyx  setup.py
benchmark/: benchmark.py  benchmark_2.py
docs/: html
docs/source/: conf.py  index.rst
docs/source/content/: building_for_new_archs.rst  building_lib_uring.rst  modules.rst  todo.rst
pyraio/: __init__.py  _docs.py  aligned_alloc.pxd  aligned_alloc_extra.pxd  batch_reader.pxd  batch_reader.pyx  batch_reader_2.pyx  batch_reader_uring.pyx  event_managers.pxd  event_managers.pyx  liburing.pxd  pyraio.pyx  pyraio_uniform.pyx  read_input_iter.pxd  read_input_iter.pyx  reader.pyx  util.pxd  util.pyx
pyraio/benchmark/: benchmark.py  line_profile.ipy  profile.ipy
tests/: batch_reader.py  batch_reader_2.py  batch_reader_uring.py  batch_reader_uring2.py  event_managers.py  pyraio.py  pyraio_uniform.py  pytest.ini  read_input_iter.py
